# librespot-cpp-example

./: .gitmodules  CMakeLists.txt  readme.md
src/: main.cpp
